@@ -41,13 +41,15 @@ BSQ = 0
 BIL = 1
 BIP = 2
 
-#from numpy import *
 from spectral import image, load_training_sets, save_training_sets, settings, \
      tile_image, spy_colors, BandInfo
 from io import *
 from algorithms import *
 from graphics import *
 from database import *
+
+# Import some submodules into top-level namespace
+import algorithms.detectors as detectors
 
 try:
     import pylab
